# dnd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml
.config/: default.yml  staging.yml
.github/workflows/: ci.yml  release.yml  test.yml
archive/src/config/: handler.rs  settings.rs
archive/src/core/entity/: dice_set.rs
archive/src/core/usecase/: dice.rs
archive/src/datasources/: mod.rs
archive/src/datasources/common/: local_datasource.rs  mod.rs
archive/src/datasources/queries/: spells_query.rs
archive/src/datasources/spells/: spells_datasource.rs
benches/: bench_dice_roll.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/entity/: dice_set.rs  spell.rs
cli/tests/: test_dice_api.rs  test_spell_api.rs
cli/tests/common/: mod.rs
frontend/: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/config/: handler.rs  mod.rs  settings.rs
lib/src/core/entity/: dice_set.rs  mod.rs  spell.rs
lib/src/core/usecase/: dice.rs  spell.rs
lib/src/datasources/common/: local_datasource.rs  mod.rs  remote_datasource.rs
lib/src/datasources/queries/: spells_query.rs
lib/src/datasources/spells/: spells_datasource.rs
queries/spells/: schema.graphql  spell_by_index_query.graphql  spells_query.graphql
scripts/: pre-commit
src/: lib.rs  main.rs
src/cli/: dnd_cli.rs
src/core/: mod.rs
src/core/entity/: dice_set.rs  spell.rs
src/core/usecase/: dice_roll.rs  mod.rs  random_spell.rs
src/datasources/: graphql_datasource.rs  local_datasource.rs  mod.rs  remote_datasource.rs
src/datasources/queries/: mod.rs
src/datasources/spells/: mod.rs  spells_datasource.rs
src/entry_points/: cli.rs  mod.rs
src/spells/: mod.rs  spell_model.rs  spell_queries.rs  spells_datasource.rs  spells_repository.rs
ui/: Cargo.toml  index.html  main.css
ui/src/: app.rs  main.rs
ui/src/components/: mod.rs  spell_component.rs
