[package]
name = "dnd"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Baumel <moritz.baeumel@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cli", "random", "spells", "dice"]
categories = ["command-line-utilities"]
homepage = "https://github.com/mbaeum/dnd-rs.git"
repository = "https://github.com/mbaeum/dnd-rs.git"

[lib]
name = "dnd"
path = "src/lib.rs"

[[bin]]
name = "dnd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.11", features = ["derive"] }
futures = { version = "0.3.*" }
graphql_client = { version = "0.11.0", features = ["reqwest"] }
lru_time_cache = "0.11.11"
rand = "0.8.4"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
unstable = []
