[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.11", features = ["derive"] }
env_logger = "0.8.4"
lib = { path = "../lib" }
log = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"